# InitGuard

./: .dockerignore  .gitignore  Dockerfile  README.md  REPORT.md  docker-compose.yml  main.py  pyproject.toml  test.py  verify_frontend.py
docs/: CHANGELOG.md
frontend/: DESIGN_REPORT.md  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  api.js  main.jsx
frontend/src/components/: Button.jsx  Input.jsx  Layout.jsx  Navbar.jsx
frontend/src/context/: AuthContext.jsx  ThemeContext.jsx
frontend/src/pages/: CreateResource.jsx  CreateTask.jsx  Dashboard.jsx  Login.jsx  Register.jsx
module/: __init__.py
module/consumer/: consumer.py
module/database/: __init__.py  database.py  postgres_db.py
module/oss/: minio_oss.py  oss.py
module/postgres_instance/: __init__.py  postgres_api.py  postgres_consumer.py  postgres_instance.py
module/redis_instance/: __init__.py  redis_api.py  redis_consumer.py  redis_instanse.py
module/webapi/: __init__.py  auth.py  auth_api.py  dependence.py  lifespan.py  resource_api.py  task_api.py
resource/: __init__.py
resource/database/: __init__.py  database.py  postgres_db.py
resource/object_module/: __init__.py
resource/object_module/logger/: __init__.py  logger.py
resource/oss/: __init__.py  minio_oss.py  oss.py
resource/task/: __init__.py  backup_task.py  task_model.py
resource/user/: user_model.py
task/: __init__.py  save_task.py  task_model.py
tests/: conftest.py  test_api.py  test_backup_task.py
utils/: __init__.py  factory.py  security.py
(+1 files in other folders)
