[project]
name = "kubeguard"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==3.1.7",
    "boto3>=1.42.26",
    "fastapi>=0.128.0",
    "jose>=1.0.0",
    "loguru>=0.7.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.11.0",
    "redis>=7.1.0",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.40.0",
]
