[project]
name = "InitGuard"
version = "0.2.0"
is_production = "false"
description = "一个手动创建备份任务并且自动化完成的程序，采用fastapi技术栈"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=7.0.0",
    "asyncpg>=0.31.0",
    "bcrypt==3.1.7",
    "boto3>=1.42.26",
    "fastapi>=0.128.0",
    "jose>=1.0.0",
    "loguru>=0.7.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.11.0",
    "redis>=7.1.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.40.0",
]
